Bug 1334572 - Move Activate/Deactivate messages from PBrowser to PContent (r=smaug)

MozReview-Commit-ID: IMSK1sjeAJb