dom/ipc/TabParent.cpp
@@ -828,7 +828,7 @@ void
 TabParent::Activate()
 {
   if (!mIsDestroyed) {
-    Unused << SendActivate();
+    Unused << Manager()->AsContentParent()->SendActivate(this);
   }
 }
 
@@ -836,7 +836,7 @@ void
 TabParent::Deactivate()
 {
   if (!mIsDestroyed) {
-    Unused << SendDeactivate();
+    Unused << Manager()->AsContentParent()->SendDeactivate(this);
   }
 }
 
